syntax = "proto3";

package proto.gomlet;

import "proto/v1/common/docker.proto";
import "proto/v1/common/node.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";

option go_package = "github.com/goml/gomlet/proto/v1/gomlet";

/////////////////////////////////////////////////////////////
// Request-Response

// GetNode
message GetNodeRequest {
}

message GetNodeResponse {
    proto.common.Node node = 1;
}

// CreateContainer
message CreateContainerRequest {
    string image_name = 1;
    string container_name = 2;
    map<string, string> labels = 3;
    map<string, string> volumes = 4;
    repeated string envs = 5;
    map<int32, string> ports = 6;
    bool auto_port = 9;
}

message CreateContainerResponse {
    string id = 1;
    repeated string warnings = 2;
}

// GetContainers
message GetContainersRequest {
    string filter = 1;
}

message GetContainersResponse {
    repeated proto.common.Container containers = 1;
}

// StartContainer
message StartContainerRequest {
    string id = 1;
}

// StopContainer
message StopContainerRequest {
    string id = 1;
}

// DeleteContainer
message DeleteContainerRequest {
    string id = 1;
}
